style.css
/* ... */
.tight-width-whitespace {
    max-width: 600px;
    margin: auto auto auto auto;
}

.h1 {
    font-size: 20px;
    font-family: "Open Sans";
}

.cta-hero {
    margin-top: 22px;
    color: #FFFFFF!important;
    text-transform: uppercase;
    padding: 12px 28px 12px 28px;
    font-size: 16px;
    font-weight: 700;
}

.social {
    max-width: 400px;
    margin: auto auto auto auto;
}

h2 {
    font-size: 22px;
    line-height: 1.4em;
}

h3 {
    font-size: 15px;
    text-transform: uppercase;
    font-weight: 700;
    color: #333333!important;
}

.med-width-whitespace {
    max-width: 800px;
    margin: auto auto auto auto;
    box-shadow: 0px 0px 0px #000000;
}

h1 {
    color: #333333!important;
}

h4 {
    color: #333333!important;
}

.icons {
    margin-bottom: 14px;
    margin-top: 24px;
}

.white {
    color: #FFFFFF!important;
}

.portfolio-thumb {
    margin-bottom: 24px;
}

.portfolio-row {
    margin-bottom: 44px;
    margin-top: 50px;
}

.avatar {
    box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.3);
}

.black-background {
    background-color: rgba(165, 147, 99, 0.7);
    padding: 40px 40px 40px 40px;
}

.bold-link {
    font-weight: 900;
    text-decoration: underline!important;
}

.bgc-white {
    background-color: #FFFFFF;
}

.bgc-dark-slate-blue {
    background-color: #364577;
}

.bgc-atomic-tangerine {
    background-color: #f17941;
}

.tc-orange {
    color: #f17941!important;
}

.tc-white{
    color: #FFFFFF!important;
}

.btn-atomic-tangerine {
    background: #f17941;
    color: #FFFFFF!important;
}

.btn-atomic-tangerine:hover {
    background: #c27956!important;
    color: #FFFFFF!important;
}

.ltc-white {
    color: #FFFFFF!important;
}

.ltc-white:hover {
    color: #cccccc!important;
}

.ltc-atomic-tangerine {
    color: #f17941!important;
}

.ltc-atomic-tangerine:hover {
    color: #c27956!important;
}

.icon-dark-slate-blue {
    color: #364577!important;
    border-color: #364577!important;
}

.bg-dots-bg {
    background-image: url("img/dots-bg.png");
}

.bg-lines-h2-bg {
    background-image: url("img/lines-h2-bg.png");
}

.bg-banniere {
    background-image: url("img/agence-la-panthere.jpg");
}

.bg-presentation {
    background-image: url("img/image-de-presentation.jpg");
}

.quote{
    font-size: 18px;
    font-style: italic;
}

.author{
    font-size: 14px;
}

@media (max-width: 1024px) {
    .bloc {
        padding-left: 20px;
        padding-right: 20px;
    }
    .bloc.full-width-bloc,
    .bloc-tile-2.full-width-bloc .container,
    .bloc-tile-3.full-width-bloc .container,
    .bloc-tile-4.full-width-bloc .container {
        padding-left: 0;
        padding-right: 0;
    }
}

@media (max-width: 992px) and (min-width: 768px) {
    .navbar .nav {
        max-width: 80%
    }
    .nav-center.navbar .nav {
        max-width: 100%
    }
}

@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
    .b-parallax {
        background-attachment: scroll;
    }
}

@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
    .b-parallax {
        background-attachment: scroll;
    }
}

@media (max-width: 991px) {
    .container {
        width: 100%;
    }
    .b-parallax {
        background-attachment: scroll;
    }
    .page-container,
    #hero-bloc {
        overflow-x: hidden;
        position: relative;
    }
    .bloc {
        padding-left: constant(safe-area-inset-left);
        padding-right: constant(safe-area-inset-right);
    }
    .bloc-group,
    .bloc-group .bloc {
        display: block;
        width: 100%;
    }
    .bloc-fill-screen .fill-bloc-top-edge,
    .bloc-fill-screen .fill-bloc-bottom-edge {
        padding: 0 20px;
        padding-left: constant(safe-area-inset-left);
        padding-right: constant(safe-area-inset-right);
    }
}
/* ... */

